end of section authentication

--- a/zwajapp.API/appsettings.json
+++ b/zwajapp.API/appsettings.json
@@ -1,7 +1,12 @@
 {
-  "ConnectionStrings":{
+  "AppSettings": {
+    "Token": "Mohamed Gohr dsl opc lla hvr kml oo"
+  },
 
-    "DefaultConnection":"DataSource=ZwajApp.db"
+
+  "ConnectionStrings": {
+
+    "DefaultConnection": "DataSource=ZwajApp.db"
 
 
   },
